# discord-scheme

./: CHANGELOG.md  Main.hs  Scheme.hs  cabal.project  discord-scheme.cabal  dugin-fanclub.cabal  hie.yaml
