cabal-version:       3.0
name:                dugin-fanclub
version:             0.1.0.0
license-file:        LICENSE
author:              Kaptch
maintainer:          kaptch@gmail.com
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable dugin-fanclub
  main-is:             Main.hs
  ghc-options: -fplugin=Polysemy.Plugin
  build-depends:       base
                     , calamity
                     , polysemy
                     , polysemy-plugin
                     , stm
                     , lens
                     , text
                     , text-show
                     , di-polysemy
                     , grenade
  default-language:    Haskell2010
